test: 회원 관리와 인증 테스트 보강